--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-bootstrap-floating-label": "^1.4.11",
     "react-dom": "^17.0.1",
     "react-portal": "^4.2.1",
     "react-scripts": "4.0.1",
